src/components/NavBar/NavBar.css
.header {
    display: flex;
    align-items: center;
    justify-content: space-between;
    position: relative;
    z-index: 3;
    gap: 1rem;
    height: 70px;
    background-color: #45322b;
    opacity: 0.99;
    color: white;
    margin-left: 1rem;
    margin-right: 1rem;
    border-radius: 0.7rem;
    overflow: hidden;
    padding-right: 1rem;
}

.brand {
    background-color: #352924;
    padding: 1rem;
}

.logo {
    width: 50px;
    cursor: pointer;
}

.drop-btn {
    background-color: #45322b;
    color: white;
    font-size: 1.1em;
    border: none;
    outline: none;
}

.drop-btn:hover {
    background-color: #493A33;
    border: none;
    outline: none;
}

.icon {
    position: relative;
    top: 3px;
    color: #9F9793;
}

.play-btn {
    background-color: #AA25B4;
    color: white;
    font-size: 1.1em;
    border: none;
}

.play-btn:hover {
    background-color: #c542cf;
}

.nav-btn {
    padding: 2px;
    background: transparent;
    border: none;
    outline: none;
    color: white;
    visibility: hidden;
    opacity: 0;
}

.nav-btn:hover {
    background-color: #493A33;
    border: none;
    outline: none;
}

.dropdown-info, .dropdown-me {
    float: left;
    overflow: hidden;
}

.dropdown-content-info, .dropdown-content-me {
    display: none;
    position: absolute;
    background-color: #352924;
    z-index: 3;
    border-radius: 0.75rem;
}

.dropdown-content-info a,
.dropdown-content-me a,
.dropdown-content-info p,
.dropdown-content-me p {
    float: none;
    color: white;
    text-decoration: none;
    display: block;
    text-align: center;
    padding: 1rem;
    border-radius: 0.75rem;
}

.dropdown-content-info a:hover,
.dropdown-content-me a:hover {
    background-color: #493A33;
    color: white;
}

.dropdown-info:hover .dropdown-content-info {
    display: block;
}

.dropdown-me:hover .dropdown-content-me {
    display: block;
}

@media only screen and (max-width: 750px) {
    .header {
        margin-left: 0rem;
        margin-right: 0rem;
        border-radius: 0rem;
    }

    .nav-btn {
        visibility: visible;
        opacity: 1;
    }

    nav {
        display: flex;
        flex-direction: column;
        position: fixed;
        left: 0;
        top: 0;
        height: 100%;
        width: 100%;
        align-items: center;
        justify-content: center;
        gap: 5rem;
        transition: 1s;
        transform: translateX(100vw);
        background-color: #45322b;
    }

    .responsive-nav {
        transform: none;
    }
}

